# clubedoleilao

./: README.md  api_1_formated.json  central_sul_formated.json  coleta.ipynb  collect_api_1.py  collect_api_2.py  collect_central_sul.py  pyproject.toml  sadas.py  teste.py
.ipynb_checkpoints/: coleta-checkpoint.ipynb
